[project]
name = "triton-example"
version = "0.1.0"
description = ""
authors = [
    {name = "Fefor"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "onnx (>=1.18.0,<2.0.0)",
    "notebook (>=7.4.4,<8.0.0)",
    "ipykernel (>=6.29.5,<7.0.0)",
    "matplotlib (>=3.10.3,<4.0.0)",
    "transforms (>=0.2.1,<0.3.0)",
    "tritonclient (>=2.59.0,<3.0.0)",
    "fastapi (>=0.116.0,<0.117.0)",
    "python-multipart (>=0.0.20,<0.0.21)",
    "grpcio (>=1.73.1,<2.0.0)",
    "torchvision (>=0.22.1,<0.23.0)",
    "uvicorn (>=0.35.0,<0.36.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
